Darrien's UI adjustments

--- a/SherpaDesk/Info.xaml
+++ b/SherpaDesk/Info.xaml
@@ -27,7 +27,7 @@
         </Grid.ColumnDefinitions>
         <Image VerticalAlignment="Stretch" Grid.Column="1" Canvas.ZIndex="-1" Source="Assets/Images/main-background.png" Stretch="UniformToFill"/>
         <Frame x:Name="ActivityFrame" VerticalAlignment="Top" Grid.Column="2" Margin="0,0,0,0" />
-        <Grid Grid.Column="1" Canvas.ZIndex="1">
+        <Grid x:Name="InfoGrid" Grid.Column="1" Canvas.ZIndex="1" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="190" />
                 <ColumnDefinition />
