--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -70,7 +70,7 @@
                     <HyperlinkButton VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Tapped="AddUserLink_Tapped" />
                     <Image Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" Tapped="AddUserLink_Tapped" PointerEntered="AddUserArrow_PointerEntered" PointerExited="AddUserArrow_PointerExited" />
                 </Grid>
-                <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent">
+                <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent" x:Name="AddTicketGrid">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
@@ -168,7 +168,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-            <TextBlock Foreground="#86abb6" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,50,30" FontSize="40" Text="New User" FontWeight="Normal"/>
+            <TextBlock Foreground="#86abb6" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,50,20" FontSize="40" Text="New User" FontWeight="Normal"/>
             <Button Width="280" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Submit" HorizontalAlignment="Center" Grid.Column="3" Grid.Row="2" Foreground="White" FontWeight="Normal" PointerEntered="CreateUserButton_PointerEntered" PointerExited="CreateUserButton_PointerExited" Tapped="CreateUserButton_Tapped" />
             <TextBlock Text="or" Grid.Column="3" Grid.Row="3" HorizontalAlignment="Center" FontSize="24" Margin="0,10,90,0" VerticalAlignment="Center" Foreground="#85778f" />
             <TextBlock Grid.Column="3" HorizontalAlignment="Center" Grid.Row="3" FontSize="24" Margin="20,10,0,0" VerticalAlignment="Center" Foreground="#85778f" Tapped="CancelButton_Tapped" PointerEntered="CancelButton_PointerEntered" PointerExited="CancelButton_PointerExited">
@@ -176,7 +176,7 @@
                    Cancel
                 </Underline>
             </TextBlock>
-            <Grid Grid.Row="1" Grid.Column="0" Margin="20,0,50,0">
+            <Grid Grid.Row="1" Grid.Column="0" Margin="20,0,20,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
