--- a/SherpaDesk/TimeLogs.xaml
+++ b/SherpaDesk/TimeLogs.xaml
@@ -64,7 +64,8 @@
                 GridLinesBrush="Transparent"
                 Height="auto"
                 Margin="0,15,0,0"                    
-                SelectionMode="None">
+                ItemsSource="{Binding Data}"
+                IsSynchronizedWithCurrentItem="True">
                 <telerik:RadDataGrid.Resources>
                     <Style TargetType="gridPrimitives:DataGridHoverControl">
                         <Setter Property="Background" Value="Transparent"/>
@@ -76,40 +77,86 @@
                         <Setter Property="Background" Value="Transparent"/>
                     </Style>
                 </telerik:RadDataGrid.Resources>
+                <telerik:RadDataGrid.Commands>
+                    <!--<gridCommands:DataGridUserCommand Id="BeginEdit" />
+                    <gridCommands:DataGridUserCommand Id="CancelEdit" />-->
+                    <local:CustomCommitEditCommand />
+                </telerik:RadDataGrid.Commands>
                 <telerik:RadDataGrid.Columns>
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="TicketNumber" Header="Tkt#" SizeMode="Auto" />
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="TicketNumber" 
+                        Header="Tkt#" 
+                        SizeMode="Auto"
+                        CanUserEdit="False"
+                        CanUserFilter="False"/>
 
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="Date" Header="Date" SizeMode="Auto" />
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="Date" 
+                        Header="Date" 
+                        SizeMode="Auto"/>
 
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="ProjectName" Header="Project" SizeMode="Auto" />
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="ProjectName" 
+                        Header="Project"
+                        SizeMode="Auto"
+                        CanUserEdit="False"
+                        CanUserFilter="False"/>
 
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="StartStopTime" Header="Start/Stop" SizeMode="Auto" />
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="StartStopTime" 
+                        Header="Start/Stop" 
+                        SizeMode="Auto"
+                        CanUserEdit="False"
+                        CanUserFilter="False"/>
 
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="Hours" Header="Time Log" SizeMode="Auto" />
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="Hours" 
+                        Header="Time Log" 
+                        SizeMode="Auto" />
 
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="UserName" Header="Name" SizeMode="Auto" />
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="UserName" 
+                        Header="Name" 
+                        SizeMode="Auto" 
+                        CanUserEdit="False"
+                        CanUserFilter="False"/>
 
-                    <telerik:DataGridTemplateColumn HeaderStyle="{StaticResource WorkListHeaderTextStyle}" Width="50" Header="Billable" SizeMode="Auto">
-                        <telerik:DataGridTemplateColumn.CellContentTemplate>
-                            <DataTemplate>
-                                <CheckBox x:Name="BillableCheckbox" IsEnabled="False" IsChecked="{Binding Billable}" Margin="20,20,20,20" HorizontalAlignment="Left" />
-                            </DataTemplate>
-                        </telerik:DataGridTemplateColumn.CellContentTemplate>
-                    </telerik:DataGridTemplateColumn>
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="TaskTypeName" Header="Task" SizeMode="Auto" />
-                    <telerik:DataGridTextColumn CellContentStyle="{StaticResource WorkListCellTextStyle}" HeaderStyle="{StaticResource WorkListHeaderTextStyle}" PropertyName="Note" Header="Note" SizeMode="Auto" />
-                    <telerik:DataGridTemplateColumn HeaderStyle="{StaticResource WorkListHeaderTextStyle}" Width="50" Header="Edit / Remove" SizeMode="Auto">
-                        <telerik:DataGridTemplateColumn.CellContentTemplate>
-                            <DataTemplate>
-                                <StackPanel>
-                                    <Button Width="200" 
-                               Height="30"
-                               Content="Edit" CommandParameter="2">
-                                    </Button>
-                                </StackPanel>
-                            </DataTemplate>
-                        </telerik:DataGridTemplateColumn.CellContentTemplate>
-                    </telerik:DataGridTemplateColumn>
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        PropertyName="Billable" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        Width="50" 
+                        Header="Billable" 
+                        SizeMode="Auto"/>
+                    
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="TaskTypeName" 
+                        Header="Task" 
+                        SizeMode="Auto" 
+                        CanUserEdit="False"
+                        CanUserFilter="False"/>
+                    
+                    <telerik:DataGridTextColumn 
+                        CellContentStyle="{StaticResource WorkListCellTextStyle}" 
+                        HeaderStyle="{StaticResource WorkListHeaderTextStyle}" 
+                        PropertyName="Note" 
+                        Header="Note" 
+                        SizeMode="Auto" />
+                    
                 </telerik:RadDataGrid.Columns>
             </telerik:RadDataGrid>
         </Grid>
